tests/snapshots/examples_fixtures/type_system__failing__144_guarded_wildcard_only_non_exhaustive_targeted.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/144_guarded_wildcard_only_non_exhaustive_targeted.flx
== compile ==
failed (compile)
== diagnostics ==
error[E015]: Non-Exhaustive Match

Match is not exhaustive: 1 missing pattern.

  examples/type_system/failing/144_guarded_wildcard_only_non_exhaustive_targeted.flx:27:14
   |
27 |     let _y = match x {
   |              ^^^^^^^^^
28 |         _ if x > 0 -> 1
   | ^^^^^^^^^^^^^^^^^^^^^^^
29 |     }
   | ^^^^^

Hint:
  Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
== stdout ==
<not executed>
